# nhatroso-platform

./: .editorconfig  .eslintrc.cjs  .gitignore  .lintstagedrc  .npmrc  .prettierignore  README.md  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/api/server-api/: .env.example  .gitignore  Cargo.toml  check_db.js  package.json  test_output.txt
apps/api/server-api/config/: development.yaml  test.yaml
apps/api/server-api/examples/: playground.rs
apps/api/server-api/migration/src/: lib.rs  m20260304_034518_users.rs  m20260304_034525_create_refresh_tokens.rs  m20260305_100000_create_property_tables.rs  m20260305_153000_add_name_to_users.rs  m20260305_154000_update_users_nullability.rs  m20260306_075955_buildings.rs  m20260306_080005_blocks.rs  m20260306_080006_floors.rs  m20260306_080015_rooms.rs  m20260311_030533_add_services_and_price_rules.rs  m20260317_023749_contracts.rs  m20260317_064357_create_contract_tenants.rs  m20260317_064844_move_identity_to_users.rs  m20260317_071311_add_rental_period_to_contracts.rs  m20260317_141521_remove_blocks.rs  m20260318_103000_add_building_address_to_contracts.rs  m20260318_103600_replace_building_address_with_room_details.rs  m20260319_033311_modify_price_rules_schema.rs  m20260320_034905_add_is_active_to_price_rules.rs  m20260321_024654_drop_legacy_columns_from_price_rules.rs  m20260321_024704_create_room_services_table.rs  m20260321_031739_allow_null_price_rule_in_room_services.rs  m20260324_021448_meters.rs  m20260324_021458_create_meter_readings.rs  m20260327_105200_create_reading_requests.rs  m20260331_032227_meter_request_configs.rs  m20260331_032406_meter_requests.rs  m20260331_032456_meter_submissions.rs  m20260401_031812_add_usage_to_meter_readings.rs  m20260401_035027_add_period_to_meter_readings.rs  m20260402_085249_fix_meter_unique_index.rs  m20260408_031256_invoices.rs  m20260408_034031_invoice_details.rs  (+10 more)
apps/api/server-api/src/: app.rs  lib.rs  swagger.rs
(+606 files in other folders)
