[workspace]

[package]
name = "server-api"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "server_api-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rust_decimal = { version = "1", features = ["serde-float"] }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["ws"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
aws-config = "1.1"
aws-sdk-s3 = "1.1"
base64 = "0.22"
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
anyhow = "1.0.102"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.8"
hex = "0.4"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
once_cell = "1.20"
aws-sdk-sesv2 = "1.118.0"
redis = { version = "1.2.0", features = ["aio", "tokio-comp"] }
tera = "1.20.1"
dotenvy = "0.15.7"
google-cloud-vision-v1 = "1.8"
google-cloud-auth = "1.9"
image = "0.25"
imageproc = "0.25"

[[bin]]
name = "server_api-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
